# RuSk

./: .gitignore  :w  Cargo.toml  README.md  a.out  program.rusk  s.ll  script.rusk  script.s
src/: main.rs
src/codegen/: error.rs  mod.rs  ty.rs
src/lexer/: mod.rs  tokens.rs
src/parser/: error.rs  mod.rs  ptr.rs
