[package]
name = "RuSk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
anyhow = "1"
llvm-sys = { package = "llvm-sys", version = "160" }
lazy_static = "1.4.0"
